# pirates-and-cpp

./: .clang-format  .clang-tidy  .editorconfig  .envrc  .gitignore  .markdownlint.yaml  CMakeLists.txt  Doxyfile  README.md  REUSE.toml  build.bat  build.sh  flake.nix  setup.bat
.reuse/templates/: doxygen.commented.jinja2
docs/: CONTRIBUTING.md
include/: AnchorCard.hpp  BustChecker.hpp  CannonCard.hpp  Card.hpp  CardSelector.hpp  ChestCard.hpp  Game.hpp  GameTitle.hpp  HookCard.hpp  InputHelper.hpp  KeyCard.hpp  KrakenCard.hpp  MapCard.hpp  MermaidCard.hpp  OracleCard.hpp  Player.hpp  RandomProvider.hpp  SwordCard.hpp
src/: AnchorCard.cpp  CannonCard.cpp  Card.cpp  CardSelector.cpp  ChestCard.cpp  Game.cpp  HookCard.cpp  InputHelper.cpp  KeyCard.cpp  KrakenCard.cpp  MapCard.cpp  MermaidCard.cpp  OracleCard.cpp  Player.cpp  RandomProvider.cpp  SwordCard.cpp  main.cpp
tests/: test_abilities.cpp  test_card.cpp  test_game.cpp  test_helpers.hpp  test_lifecycle.cpp  test_player.cpp
